--- a/index.html
+++ b/index.html
@@ -1,84 +1,79 @@
 <!DOCTYPE html>
 <html>
-<title>DeVault Wildlife Lab at UGA</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>body { font-family: "Times New Roman", Georgia, Serif; } h1, h2, h3, h4, h5, h6 { font-family: "Playfair Display"; letter-spacing: 5px; }</style>
-
-<body>
-
-	<!-- Navbar -->
-
-	<div class="w3-top">
-		<div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-			<a href="index.html" class="w3-bar-item w3-button">DeVAULT LAB</a>
-			<div class="w3-right w3-hide-small">
-				<a href="people.html" class="w3-bar-item w3-button">People</a>
-				<a href="research.html" class="w3-bar-item w3-button">Research</a>
-				<a href="index.html#news" class="w3-bar-item w3-button">News</a>
-				<a href="collaborators.html" class="w3-bar-item w3-button">Collaborators</a>
-				<a href="contact.html" class="w3-bar-item w3-button">Contact</a>
-			</div>
-		</div>
-	</div>
-
-	<!-- Header -->
-
-	<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-		<img class="w3-image" src="./images/home.jpg" alt="home" width="100%" height=auto>
-		<div class="w3-display-bottomleft w3-padding-large">
-			<h1 style="color: white; opacity: 1"><b>DeVAULT WILDLIFE LAB</b></h1>
-			<p style="color: white;">at University of Georgia&mdash;Savannah River Ecology Laboratory</p>
-		</div>
-	</header>
-
-	<!-- Page content -->
-
-	<div class="w3-content">
-
-		<!-- What We Do -->
-
-		<div class="w3-row w3-padding-64" id="what">
-			<div class="w3-col m6 w3-padding-large w3-hide-small">
-				<img src="./images/about.jpg" class="w3-round w3-image w3-opacity-min" alt="what" width="100%" height="auto">
-			</div>
-			<div class="w3-col m6 w3-padding-large">
-				<h1 class="w3-center">What We Do</h1>
-				<p class="w3-large">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-			</div>
-		</div>
-		
-		<hr><!-- Where We Work -->
-
-		<div class="w3-row w3-padding-64" id="where">
-			<div class="w3-col m6 w3-padding-large w3-hide-small">
-				<img src="./images/where.png" class="w3-round w3-image w3-opacity-min" alt="where" width="auto" height="auto">
-			</div>
-			<div class="w3-col m6 w3-padding-large">
-				<h1 class="w3-center">Where We Work</h1>
-				<p class="w3-large">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-			</div>
-		</div>
-		
-		<hr><!-- News section -->
-		
-		<div class="w3-row w3-padding-64">
-			<div style="margin: 0 auto; width: 80%"; id="news">
-				<a class="twitter-timeline" data-height="800" href="https://twitter.com/DevaultLab?ref_src=twsrc%5Etfw"></a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-				</div>
-		</div>
-
-	</div>
-
-	<!-- Footer -->
-
-	<footer class="w3-center w3-light-grey w3-padding-32">
-													<p>The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia. Theme modified from
-														<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a>
-													</p>
-	</footer>
-</body>
-
-</html>
+	<title>DeVault Wildlife Lab at UGA</title>
+	<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+			<link rel="stylesheet" href="style.css">
+				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+					<style>body { font-family: "Times New Roman", Georgia, Serif; } h1, h2, h3, h4, h5, h6 { font-family: "Playfair Display"; letter-spacing: 5px; }</style>
+					<body>
+						<!-- Navbar -->
+						<div class="w3-top">
+							<div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px">
+								<a href="index.html" class="w3-bar-item w3-button">DeVAULT LAB</a>
+								<div class="w3-right w3-hide-small">
+									<a href="people.html" class="w3-bar-item w3-button">People</a>
+									<a href="research.html" class="w3-bar-item w3-button">Research</a>
+									<a href="index.html#news" class="w3-bar-item w3-button">News</a>
+									<a href="collaborators.html" class="w3-bar-item w3-button">Collaborators</a>
+									<a href="publications.html" class="w3-bar-item w3-button">Publications</a>
+									<a href="opportunities.html" class="w3-bar-item w3-button">Contact & Opportunities</a>
+								</div>
+							</div>
+						</div>
+						<!-- Header -->
+						<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
+							<img class="w3-image" src="./images/home.jpg" alt="home" width="100%" height=auto>
+								<div class="w3-display-bottomleft w3-padding-large">
+									<h1 style="color: white; opacity: 1">
+										<b>DeVAULT WILDLIFE LAB</b>
+									</h1>
+									<p style="color: white;">at University of Georgia&mdash;Savannah River Ecology Lab</p>
+								</div>
+							</header>
+							<!-- Page content -->
+							<div class="w3-content">
+								<!-- What We Do -->
+								<div class="w3-container w3-padding-64" id="what">
+									<div class="grid-container">
+										<div>
+											<img src="./images/mistnet_crop4.jpg" class="w3-round w3-image" alt="what" width="100%" height="auto"></div>
+										<div>
+											<h1 class="w3-center">What We Do</h1>
+											<p class="w3-large">The DeVault Wildlife Lab is a research group at the
+												<a href="srel.uga.edu" title="SREL" target="_blank" class="w3-hover-text-green">University of Georgia's Savannah River Ecology Laboratory.</a>
+												We apply behavioral and ecological concepts to problems arising from wildlife-human interactions, especially with regard to understanding and mitigating animal-vehicle collisions and the conservation and ecology of vertebrate scavengers. As such, our research interests span basic ecology to conservation and management. Although much of our work involves birds, our research is question-driven rather than strictly taxonomically-focused. Our work is highly collaborative and interdisciplinary. Welcome to our site, browse these pages, and let us know if you have questions or comments.
+											</p>
+										</div>
+									</div>
+									<hr>
+										<!-- Where We Work -->
+										<div class="w3-container w3-padding-64" id="where">
+											<div class="grid-container">
+												<div>
+													<img src="./images/where.png" class="w3-round w3-image" alt="where" width="100%" height="auto"></div>
+												<div>
+													<h1 class="w3-center">Where We Work</h1>
+													<p class="w3-large">The Savannah River Ecology Lab (SREL), a research unit of the University of Georgia, pursues basic and applied research at multiple levels of ecological organization, from atoms to ecosystems. SREL is located near Aiken, SC, on the Savannah River Site, a Department of Energy facility and the first national environmental research park. Research at SREL extends beyond the site to regional and global projects. To date, the lab has produced more than 3,000 peer-reviewed publications.</p>
+												</div>
+											</div>
+											<hr>
+												<!-- News section -->
+												<div class="w3-row w3-padding-64">
+													<div style="margin: 0 auto; width: 80%" id="news">
+														<a class="twitter-timeline" data-height="800" href="https://twitter.com/DevaultLab?ref_src=twsrc%5Etfw"/>
+														<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"/>
+													</div>
+												</div>
+											</div>
+											<!-- Footer -->
+											<footer class="w3-center w3-light-grey w3-padding-32">
+												<p class="w3-small">The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia.</p>
+												<p class="w3-small">
+													<a href="https://github.com/devaultlab/devaultlab.github.io" title="Website theme" target="_blank" class="w3-hover-text-green">Website theme</a>
+													modified from
+													<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a>
+												</p>
+											</footer>
+										</body>
+									</html>
