--- a/people.html
+++ b/people.html
@@ -15,66 +15,88 @@
 								<a href="research.html" class="w3-bar-item w3-button">Research</a>
 								<a href="index.html#news" class="w3-bar-item w3-button">News</a>
 								<a href="collaborators.html" class="w3-bar-item w3-button">Collaborators</a>
-								<a href="contact.html" class="w3-bar-item w3-button">Contact</a>
+								<a href="publications.html" class="w3-bar-item w3-button">Publications</a>
+								<a href="opportunities.html" class="w3-bar-item w3-button">Contact & Opportunities</a>
 							</div>
 						</div>
 					</div>
 					<!-- Header -->
-					<header>
+					<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
+						<img class="w3-image" src="./images/home_crop2.jpg" alt="home" width="100%" height=auto>
+							<div class="w3-display-bottomleft w3-padding-large">
+								<h1 style="color: white; opacity: 1">
+									<b>PEOPLE</b>
+								</h1>
+							</div>
+						</header>
 						<!-- Page content -->
 						<div class="w3-content">
-								<!-- People Section -->
-								<div class="w3-padding-top-64">
-									<h1>People</h1>
-								</div>
-								<div class="grid-container" style="margin-left:16px!important">
-									<img src="./images/travis.jpg" class="w3-round w3-opacity-min" alt="travis" width="100%" height="auto">
-										<div>
-											<h5>Travis DeVault, Ph.D</h5>
-											<p style="color: grey">Title / travis at uga dot edu /
-												<a href="https://scholar.google.com/citations?user=1Ry3fI8AAAAJ&hl=en" title="Google Scholar" target="_blank">Google Scholar</a>
+							<!-- People Section -->
+							<div class="w3-container w3-padding-64"/>
+							<div class="grid-container" style="margin-left:16px!important">
+								<div>
+									<img src="./images/travis_crop.jpg" class="w3-round" alt="travis" width="100%" height="auto">
+										<img src="./images/travis_interests.jpg" class="w3-round" alt="travis" width="100%" height="auto" style="padding-top:10%"></div>
+									<div>
+										<h5>Travis DeVault, Ph.D</h5>
+										<p style="color: grey">Principle Investigator / travis at uga dot edu /
+											<a href="https://scholar.google.com/citations?user=1Ry3fI8AAAAJ&hl=en" title="Google Scholar" target="_blank" class="w3-hover-text-green">Google Scholar</a>
+											<p>Travis DeVault is the Associate Director for Research and Senior Research Scientist at the
+												<a href="https://srel.uga.edu" title="SREL" target="_blank" class="w3-hover-text-green">University of Georgia's Savannah River Ecology Laboratory (SREL)</a>
+												. He also has a courtesy faculty appointment in the
+												<a href="https://www.warnell.uga.edu/" title="Warnell School of Forestry & Natural Resources" target="_blank" class="w3-hover-text-green">Warnell School of Forestry & Natural Resources</a>
+												where he advises graduate students. He earned bachelor’s and master’s degrees in ecology and systematics from the
+												<a href="https://www.indstate.edu/cas/biology" title="Department of Biology at Indiana State University" target="_blank" class="w3-hover-text-green">Department of Biology at Indiana State University</a>
+												and a PhD in wildlife ecology from the
+												<a href="https://ag.purdue.edu/fnr/Pages/default.aspx" title="Department of Forestry and Natural Resources at Purdue University" target="_blank" class="w3-hover-text-green">Department of Forestry and Natural Resources at Purdue University</a>
+												. Travis is a wildlife ecologist and conservation biologist; his research focuses on understanding and preventing animal-vehicle collisions and other human-wildlife conflicts. He also maintains a long term research interest in the ecology of vultures and other vertebrate scavengers. Outside of work, Travis is a jack of all trades and master of none. He’s an eclectic sort who enjoys fishing, hunting, kayaking and canoeing, hiking with his family, wrestling with his dogs, playing basketball, obsessing over Chicago Cubs baseball and Indianapolis Colts football, blues guitar, tinkering in his woodshop, and playing video games while consuming bourbon and scotch. Actually, he is pretty good at that last one.
 											</p>
+										</p>
+									</div>
+									<img src="./images/mary.webp" class="w3-round w3-opacity-min" alt="mary" width="100%" height="auto">
+										<div>
+											<h5>Mary Chapman</h5>
+											<p style="color: grey">Project Coordinator / mary at uga dot edu</p>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 										</div>
-										<img src="./images/mary.webp" class="w3-round w3-opacity-min" alt="mary" width="100%" height="auto">
+										<img src="./images/shayna.webp" class="w3-round w3-opacity-min" alt="shayna" width="100%" height="auto">
 											<div>
-												<h5>Mary Chapman</h5>
-												<p style="color: grey">Title / mary at uga dot edu</p>
+												<h5>Shayna Mu&#241;oz</h5>
+												<p style="color: grey">Research Technician / shayna at uga dot edu</p>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 											</div>
-											<img src="./images/shayna.webp" class="w3-round w3-opacity-min" alt="shayna" width="100%" height="auto">
+											<img src="./images/carson_tele_crop2.jpg" class="w3-round" alt="carson" width="100%" height="auto">
 												<div>
-													<h5>Shayna Mu&#241;oz</h5>
-													<p style="color: grey">Title / shayna at uga dot edu</p>
-													<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+													<h5>Carson Pakula</h5>
+													<p style="color: grey">M.S. Student / carson at uga dot edu</p>
+													<p>Carson received his B.S. in Biology from Central Michigan University where he studied black footed ferret genetics and the impacts of hiking trails on small mammal populations. He is currently an M.S. student at Warnell's School of Forestry and Natural Resources. Carson is studying the behavior of deer and wild pigs to help reduce wildlife-vehicle collisions. He is interested in behavioral ecology, wildlife conservation, and human-wildlife interactions.</p>
 												</div>
-												<img src="./images/carson.jpg" class="w3-round w3-opacity-min" alt="carson" width="100%" height="auto">
+												<img src="./images/shane.jpg" class="w3-round w3-opacity-min" alt="shane" width="100%" height="auto">
 													<div>
-														<h5>Carson Pakula</h5>
-														<p style="color: grey">Title / carson at uga dot edu</p>
+														<h5>Shane Guenin</h5>
+														<p style="color: grey">M.S. Student / shane at uga dot edu</p>
 														<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 													</div>
-													<img src="./images/shane.jpg" class="w3-round w3-opacity-min" alt="shane" width="100%" height="auto">
+													<img src="./images/jon_headshot_crop.jpg" class="w3-round" alt="jon" width="100%" height="auto">
 														<div>
-															<h5>Shane Guenin</h5>
-															<p style="color: grey">Title / shane at uga dot edu</p>
-															<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-														</div>
-														<img src="./images/jon.jpg" class="w3-round w3-opacity-min" alt="jon" width="100%" height="auto">
-															<div>
-																<h5>Jon Skaggs</h5>
-																<p style="color: grey">Title / jskaggs at uga dot edu</p>
-																<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-															</div>
+															<h5>Jon Skaggs</h5>
+															<p style="color: grey">Lab Manager / jskaggs at uga dot edu /
+																<a href="https://www.github.com/jskaggs2" title="github/jskaggs2" target="_blank">Github</a>
+															</p>
+															<p>Jon manages day to day DeVault Lab stuff and leads our bird monitoring fieldwork associated with the Savannah Harbor Expansion Project. He recieved a B.S. in Ecology and M.S. in Conservation Ecology and Sustainable Development from UGA's Odum School of Ecology. His masters research developed and applied quantiative conservation planning techniques to a freshwater biodiversity hotspot, the Upper Coosa River System. Jon is interested in ecotoxicology, watershed ecology, quantiative conservation planning, and spatial analysis. He also likes bicycles. Jon built and maintains this website; if you see something strange, or are interested in the site itself, please reach out.</p>
 														</div>
 													</div>
-													<!-- End page content -->
 												</div>
-												<!-- Footer -->
-												<footer class="w3-center w3-light-grey w3-padding-32">
-													<p>The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia. Theme modified from
-														<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a>
-													</p>
-												</footer>
-											</body>
-										</html>
+												<!-- End page content -->
+											</div>
+										</body>
+										<!-- Footer -->
+										<footer class="w3-center w3-light-grey w3-padding-32">
+											<p class="w3-small">The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia.</p>
+											<p class="w3-small">
+												<a href="https://github.com/devaultlab/devaultlab.github.io" title="Website theme" target="_blank" class="w3-hover-text-green">Website theme</a>
+												modified from
+												<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a>
+											</p>
+										</footer>
+									</html>
