--- a/research.html
+++ b/research.html
@@ -16,77 +16,63 @@
 									<a href="research.html" class="w3-bar-item w3-button">Research</a>
 									<a href="index.html#news" class="w3-bar-item w3-button">News</a>
 									<a href="collaborators.html" class="w3-bar-item w3-button">Collaborators</a>
-									<a href="contact.html" class="w3-bar-item w3-button">Contact</a>
+									<a href="publications.html" class="w3-bar-item w3-button">Publications</a>
+									<a href="opportunities.html" class="w3-bar-item w3-button">Contact & Opportunities</a>
 								</div>
 							</div>
 						</div>
 						<!-- Header -->
-						<header/>
-						<!-- Page content -->
-						<div class="w3-content">
-							<!-- Current projects -->
-							<div class="w3-padding-top-64">
-								<h1>Research</h1>
-							</div>
-							<div class="w3-padding">
-								<h3>Ecology of Animal-Vehicle Collisions</h3>
-							</div>
-							<div class="grid-container" style="margin-left:16px!important">
-								<img src="./images/lab.webp" class="w3-round w3-opacity-min" alt="lab" width="100%" height="auto">
-									<div>
-										<h5>Project blurb</h5>
-										<p style="color: grey">Subtitle</p>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-									</div>
-									<img src="./images/lab.webp" class="w3-round w3-opacity-min" alt="lab" width="100%" height="auto">
+						<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
+							<img class="w3-image" src="./images/home_crop2.jpg" alt="home" width="100%" height=auto>
+								<div class="w3-display-bottomleft w3-padding-large">
+									<h1 style="color: white; opacity: 1">
+										<b>RESEARCH</b>
+									</h1>
+								</div>
+							</header>
+							<!-- Page content -->
+							<div class="w3-content">
+								<!-- Current projects -->
+								<div class="w3-container w3-padding-64" id="research">
+									<h3>Ecology of Animal-Vehicle Collisions</h3>
+									<div class="grid-container">
 										<div>
-											<h5>Project blurb</h5>
-											<p style="color: grey">Subtitle</p>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-										</div>
-									</div>
-									<div style="margin-left:16px!important">
-										<h3>Avian Ecotoxicology</h3>
-									</div>
-									<div class="grid-container" style="margin-left:16px!important">
-										<img src="./images/lab.webp" class="w3-round w3-opacity-min" alt="lab" width="100%" height="auto">
+											<img src="./images/about.jpg" class="w3-round" alt="travis" width="100%" height="auto">
+												<img src="./images/lightbar.jpg" class="w3-round" alt="travis" width="100%" height="auto" style="padding-top:10%"></div>
 											<div>
-												<h5>Project blurb</h5>
-												<p style="color: grey">Subtitle</p>
+												<p>Animal-vehicle collisions (AVCs) are ubiquitous across the developed world. AVCs cause billions of animal deaths each year and pose substantial safety threats and economic costs to people. Research on AVCs in the DeVault Lab is focused on learning why AVCs occur by investigating what goes wrong from the animal’s perspective when they are struck by vehicles. DeVault Lab members then apply that knowledge to the development of mitigation measures designed to reduce collisions.</p>
+												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 											</div>
-											<img src="./images/lab.webp" class="w3-round w3-opacity-min" alt="lab" width="100%" height="auto">
-												<div>
-													<h5>Project blurb</h5>
-													<p style="color: grey">Subtitle</p>
-													<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-												</div>
-											</div>
-											<div style="margin-left:16px!important">
-												<h3>Scavenging Ecology</h3>
-											</div>
-											<div class="grid-container" style="margin-left:16px!important">
-												<img src="./images/lab.webp" class="w3-round w3-opacity-min" alt="lab" width="100%" height="auto">
+										</div>
+										<hr>
+											<h3>Avian Ecotoxicology</h3>
+											<div class="grid-container">
+												<img src="./images/shep_mistnet.jpg" class="w3-round" alt="lab" width="100%" height="auto">
 													<div>
-														<h5>Project blurb</h5>
-														<p style="color: grey">Subtitle</p>
-														<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+														<p>Our research team has multiple ongoing projects investigating the potential for heavy metal accumulation in sentinel bird species in industrial areas. Many species we monitor are migratory, and therefore may be a vector for the spread of contaminants across large distances. We use mist netting, trapping, and other methods to capture wild birds. To quantify metal content in samples collected in the field, use apply state of the art laboratory analytical techniques available at the University of Georgia Savannah River Ecology Lab.</p>
+														<p>This work allows us to explore exposure risk of wild birds to potentially toxic heavy metals within the context of their natural history and habitat use with the aim of informing wildlife management and conservation.</p>
 													</div>
 												</div>
 												<hr>
-													<!-- Past projects -->
-													<div class="w3-padding w3-padding-64" id="past projects">
-														<h1>Past projects</h1>
-														<p class="w3-large" style="margin-left:16px!important">
-															<a href="./reprints.html" title="Reprints" target="_blank">Click here for reprints.</a>
-														</p>
+													<h3>Scavenging Ecology</h3>
+													<div class="grid-container">
+														<img src="./images/lab.webp" class="w3-round w3-opacity-min" alt="lab" width="100%" height="auto">
+															<div>
+																<p>Scavenging is much more than a curiosity of animal behavior; carrion consumption is widespread and common among terrestrial vertebrates and can have substantial impacts on communities and ecosystems. Our work in this area has branched into several lines of inquiry, the most recent of which intersect with our interest in the causes and consequences of AVCs. With our collaborators, we recently investigated the magnitude of animal mortality caused by AVCs, how carcasses produced from automobile strikes influence animal communities through scavenging, and the role vultures play in providing ecosystem services by consuming biomass produced from AVCs.</p>
+															</div>
+														</div>
 													</div>
 													<!-- End page content -->
 												</div>
 												<!-- Footer -->
 												<footer class="w3-center w3-light-grey w3-padding-32">
-													<p>The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia. Theme modified from
-														<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a>
+													<p class="w3-small">The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia.</p>
+													<p class="w3-small">
+														<a href="https://github.com/devaultlab/devaultlab.github.io" title="Website theme" target="_blank" class="w3-hover-text-green">Website theme</a>
+														modified from
+														<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a>
+														.
 													</p>
 												</footer>
 											</body>
