--- a/collaborators.html
+++ b/collaborators.html
@@ -1,36 +1,82 @@
 <!DOCTYPE html>
 <html>
-	<title>Reprints | DeVault Wildlife Lab</title>
+	<title>Collaborators | DeVault Wildlife Lab</title>
 	<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 			<link rel="stylesheet" href="style.css">
-				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-					<style>body { font-family: "Times New Roman", Georgia, Serif; } h1, h2, h3, h4, h5, h6 { font-family: "Playfair Display"; letter-spacing: 5px; }</style>
-					<body>
-						<!-- Navbar -->
-						<div class="w3-top">
-							<div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-								<a href="index.html" class="w3-bar-item w3-button">DeVAULT LAB</a>
-								<div class="w3-right w3-hide-small">
-									<a href="people.html" class="w3-bar-item w3-button">People</a>
-									<a href="research.html" class="w3-bar-item w3-button">Research</a>
-									<a href="index.html#news" class="w3-bar-item w3-button">News</a>
-									<a href="collaborators.html" class="w3-bar-item w3-button">Collaborators</a>
-									<a href="contact.html" class="w3-bar-item w3-button">Contact</a>
-								</div>
+				<style>body { font-family: "Times New Roman", Georgia, Serif; } h1, h2, h3, h4, h5, h6 { font-family: "Playfair Display"; letter-spacing: 5px; }</style>
+				<body>
+					<!-- Navbar -->
+					<div class="w3-top">
+						<div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+							<a href="index.html" class="w3-bar-item w3-button">DeVAULT LAB</a>
+							<div class="w3-right w3-hide-small">
+								<a href="people.html" class="w3-bar-item w3-button">People</a>
+								<a href="research.html" class="w3-bar-item w3-button">Research</a>
+								<a href="index.html#news" class="w3-bar-item w3-button">News</a>
+								<a href="collaborators.html" class="w3-bar-item w3-button">Collaborators</a>
+								<a href="publications.html" class="w3-bar-item w3-button">Publications</a>
+								<a href="opportunities.html" class="w3-bar-item w3-button">Contact & Opportunities</a>
 							</div>
 						</div>
-						<!-- Header -->
-						<header/>
+					</div>
+					<!-- Header -->
+					<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
+						<img class="w3-image" src="./images/home_crop2.jpg" alt="home" width="100%" height=auto>
+							<div class="w3-display-bottomleft w3-padding-large">
+								<h1 style="color: white; opacity: 1">
+									<b>COLLABORATORS</b>
+								</h1>
+							</div>
+						</header>
 						<!-- Page content -->
-						<div class="w3-padding w3-padding-64">
-							<h1>This is where info about collaborators could go.</h1>
-						</div>
-						<!-- Footer -->
-						<footer class="w3-center w3-light-grey w3-padding-32">
-							<p>The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia. Theme modified from
-								<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a>
-							</p>
-						</footer>
-					</body>
-				</html>
+						<div class="w3-content">
+							<br>
+								<div class="w3-container w3-padding-16" style="background-color: #f1f1f1">
+									<p style="font-size:large">Our work is undoubtably improved and more fulfilling through collaboration with other research groups. You can learn more about the research programs of some of our collaborators using the links below.</p>
+								</div>
+								<div class="w3-container w3-padding-32">
+									<a href="http://beasleywildlifelab.srel.uga.edu/" title="Dr. Jim Beasley" target="_blank" class="w3-hover-text-green">
+										<h4>Dr. Jim Beasley, UGA SREL</h4>
+									</a>
+									<a href="https://www.aphis.usda.gov/aphis/ourfocus/wildlifedamage/programs/nwrc/sa_research/sa_scientists/ct-research-scientist-by-id?p=Blackwell_B" title="Dr. Brad Blackwell" target="_blank" class="w3-hover-text-green">
+										<h4>Dr. Brad Blackwell, USDA NWRC</h4>
+									</a>
+									<a href="https://sites.google.com/site/ainaracortesavizanda/" title="Dr. Ainara Cortes-Avizanda" target="_blank" class="w3-hover-text-green">
+										<h4>Dr. Ainara Cortes-Avizanda</h4>
+									</a>
+									<a href="http://www.gdharmarajan.com/" title="Dr. Guha Dharmarajan" target="_blank" class="w3-hover-text-green">
+										<h4>Dr. Guha Dharmarajan, UGA SREL</h4>
+									</a>
+									<a href="http://www.estebanfj.com/" title="Dr. Esteban Fernandez-Juricic" target="_blank" class="w3-hover-text-green">
+										<h4>Dr. Esteban Fernandez-Juricic Lab, Purdue</h4>
+									</a>
+									<a href="https://twitter.com/rb_iglay?lang=en" title="Dr. Ray Iglay" target="_blank" class="w3-hover-text-green">
+										<h4>Dr. Ray Iglay Lab, Mississippi State</h4>
+									</a>
+									<a href="https://twitter.com/gamebirddoc?lang=en" title="Dr. James Martin" target="_blank" class="w3-hover-text-green">
+										<h4>Dr. James Martin, UGA</h4>
+									</a>
+									<a href="https://www.aphis.usda.gov/aphis/ourfocus/wildlifedamage/programs/nwrc/sa_research/sa_scientists/ct-research-scientist-by-id?p=Pfeiffer_M" title="Dr. Morgan Pfeiffer" target="_blank" class="w3-hover-text-green">
+										<h4>Dr. Morgan Pfeiffer, USDA NWRC</h4>
+									</a>
+									<a href="https://www.ecology.uga.edu/directory/o-e-gene-rhodes/" title="Dr. Olin Gene Rhodes" target="_blank" class="w3-hover-text-green">
+										<h4>Dr. Olin Gene Rhodes, UGA SREL</h4>
+									</a>
+									<a href="https://www.warnell.uga.edu/people/adjunct-faculty/xiaoyu-xu" title="Dr. Xiaoyu Xu" target="_blank" class="w3-hover-text-green">
+										<h4>Dr. Xiaoyu Xu, UGA SREL</h4>
+									</a>
+								</div>
+								<!-- End page content -->
+							</div>
+							<!-- Footer -->
+							<footer class="w3-center w3-light-grey w3-padding-32">
+								<p class="w3-small">The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia.</p>
+								<p class="w3-small">
+									<a href="https://github.com/devaultlab/devaultlab.github.io" title="Website theme" target="_blank" class="w3-hover-text-green">Website theme</a>
+									modified from
+									<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a>
+								</p>
+							</footer>
+						</body>
+					</html>
