--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<title>People | DeVault Wildlife Lab</title>
+	<title>Contact | DeVault Wildlife Lab</title>
 	<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 			<link rel="stylesheet" href="style.css">
@@ -15,31 +15,41 @@
 								<a href="research.html" class="w3-bar-item w3-button">Research</a>
 								<a href="index.html#news" class="w3-bar-item w3-button">News</a>
 								<a href="collaborators.html" class="w3-bar-item w3-button">Collaborators</a>
+								<a href="publications.html" class="w3-bar-item w3-button">Publications</a>
 								<a href="contact.html" class="w3-bar-item w3-button">Contact</a>
+								<a href="contact.html" class="w3-bar-item w3-button">Opportunities</a>
 							</div>
 						</div>
 					</div>
 					<!-- Header -->
-					<header/>
-					<!-- Page content -->
-					<div class="w3-content">
-						<hr>
+					<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
+						<img class="w3-image" src="./images/home_crop2.jpg" alt="home" width="100%" height=auto>
+							<div class="w3-display-bottomleft w3-padding-large">
+								<h1 style="color: white; opacity: 1">
+									<b>CONTACT</b>
+								</h1>
+							</div>
+						</header>
+						<!-- Page content -->
+						<div class="w3-content">
 							<!-- Contact Section -->
 							<div class="w3-container w3-padding-64" id="contact">
-								<h1>Contact</h1>
-								<br>
-									<h3>Excepteur sint occaecat</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-									<h3>Prospective students</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-								</div>
-								<!-- End page content -->
+								<h3>Dr. Travis DeVault</h3>
+								<p>University of Georgia, Savannah River Ecology Laboratory</p>
+								<p>Office: (803) 725-5679</p>
+								<p>Regular Mail: PO Drawer E, Aiken, SC 29802</p>
+								<p>Courier: SREL, SRS Bldg 737A, Aiken, SC 29808</p>
+								<p>E-mail: devault at srel dot uga dot edu</p>
+								<h3>Prospective students</h3>
+								<p>Please understand that we are a small research group by design, given that most of Dr. DeVault’s time is occupied by administrative duties at SREL. When we have openings they will be advertised on the Opportunities page. Even so, feel free to contact Dr. DeVault or any other lab member by email if you are interested in our research program and might want to join our team.</p>
 							</div>
-							<!-- Footer -->
-							<footer class="w3-center w3-light-grey w3-padding-32">
-								<p>The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia. Theme modified from
-									<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a>
-								</p>
-							</footer>
-						</body>
-					</html>
+							<!-- End page content -->
+						</div>
+						<!-- Footer -->
+						<footer class="w3-center w3-light-grey w3-padding-32">
+							<p>The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia. Theme modified from
+								<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a>
+							</p>
+						</footer>
+					</body>
+				</html>
